# _template_python

./: .pre-commit-config.yaml  .yamllint  CHANGELOG.md  README.md  cookiecutter.json  create_project.py  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: ci.yml
hooks/: post_gen_project.py  pre_gen_project.py
src/: __init__.py  main.py  test_main.py
src/data/reference-proj/: .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  setup.cfg  setup.py
src/data/reference-proj/src/reference_proj/: __about__.py
tests/: __init__.py  test_main.py
tests/data/reference-proj/: setup.cfg  setup.py
{{cookiecutter.project_slug}}/: .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml.j2  requirements-dev.txt  setup.cfg  setup.py
{{cookiecutter.project_slug}}/.github/workflows/: ci.yml
{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/: __about__.py  cli.py
