[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "template_python"
version = "0.0.0"
description = "My Python project template."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "Douglas Thor"},  # so that package core metadata "Author" field gets populated.
    {name = "Douglas Thor", email = "doug.thor@gmail.com"},
]
maintainers = []
keywords = []
classifiers = []
dependencies = [
    "cookiecutter>=2.1.1,<3.0.0",
    "colorama>=0.4.6,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit==3.5.0",
    "pytest==7.4.3",
]

[project.urls]
"Source Code" = "https://github.com/dougthor42/_template_python"
"Changelog" = "https://github.com/dougthor42/_template_python/blob/master/CHANGELOG.md"
"Bug Tracker" = "https://github.com/dougthor42/_template_python/issues"

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = [
    "src",
]
# Our golden master directory structure has tests in it, and we don't want
# pytest to discover those (which ends up making a __pycache__ dir and mucking
# things up)
norecursedirs = [
    "data/reference-proj",
]

[tool.coverage.run]
branch = true

[tool.ruff]
target-version = "py310"
